--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "oxlint ."
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.3.0",
     "elysia": "latest"
   },
   "devDependencies": {
