--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
     "format": "prettier . --write",
-    "lint": "oxlint ."
+    "lint": "oxlint .",
+    "type-check": "bun tsc --noEmit"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.0",
