--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "dev": "bun run --watch src/index.ts",
     "format": "prettier . --write",
     "lint": "oxlint . && markdownlint \"**/*.md\" --ignore node_modules",
-    "type-check": "bun tsc --noEmit"
+    "type-check": "bun tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run src/db/seed.ts"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.0",
+    "@libsql/client": "^0.15.9",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "elysia": "latest"
   },
   "devDependencies": {
     "bun-types": "latest",
+    "drizzle-kit": "^0.31.1",
     "markdownlint-cli": "^0.45.0",
     "oxlint": "^1.1.0",
     "prettier": "^3.5.3"
