make env type-safe

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# Database Configuration
+# ===========================================
+# Environment Configuration
+# Copy this file to .env and fill in the values
+# ===========================================
+
+# Database Configuration (REQUIRED)
 DATABASE_URL="file:./dev.db"
 DATABASE_AUTH_TOKEN=""
 
@@ -7,9 +12,15 @@ DATABASE_AUTH_TOKEN=""
 # DATABASE_AUTH_TOKEN="your-auth-token"
 
 # Server Configuration
-PORT=3000
+PORT=6969
+HOST="localhost"
 NODE_ENV="development"
 
-# Security
+# CORS Configuration
+CORS_ORIGIN="*"
+CORS_CREDENTIALS="false"
+
+# Security Configuration
+# JWT_SECRET is REQUIRED for production environment
 JWT_SECRET="your-jwt-secret-here"
 BCRYPT_ROUNDS=12
