--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@libsql/client": "^0.15.9",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "elysia": "latest"
+    "elysia": "latest",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "bun-types": "latest",
